--- a/package.json
+++ b/package.json
@@ -4,34 +4,48 @@
   "description": "Angular ES2015, Webpack Sandpit",
   "private": true,
   "scripts": {
-    "build": "webpack --config webpack.build.js --bail -p",
-    "dev": "node node_modules/.bin/webpack-dev-server --history-api-fallback --hot --inline --progress"
+    "build": "webpack",
+    "dev": "webpack serve --history-api-fallback --hot --inline --progress"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   },
   "dependencies": {
     "angular": "^1.5.8",
     "angular-ui-router": "^0.3.1",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "single-spa": "^5.9.2",
+    "single-spa-angularjs": "^4.2.3",
+    "systemjs": "^6.8.3",
+    "systemjs-webpack-interop": "^2.3.6"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.11.6",
     "css-loader": "^0.24.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.22.0",
+    "file-loader": "^4.3.0",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.2",
+    "mini-css-extract-plugin": "^1.4.1",
     "ng-annotate-loader": "0.1.1",
     "node-libs-browser": "^1.0.0",
-    "node-sass": "^3.8.0",
+    "node-sass": "^4.14.1",
     "null-loader": "^0.1.1",
     "postcss-loader": "^0.11.1",
     "raw-loader": "^0.5.1",
-    "sass-loader": "^4.0.1",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.15.1"
+    "sass-loader": "^7.2.0",
+    "style-loader": "^2.0.0",
+    "vue-loader": "^15.9.6",
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
